# eyeBackend

./: .dockerignore  .gitattributes  .gitignore  Config.py  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml
auth/: __init__.py  auth_handler.py  auth_router.py
entity/: Order.py
eye_identify/: GradCam.py  __init__.py  model.h5
models/: EyeIdentification.py  IdentifySuggestions.py  UserRating.py  Users.py  __init__.py
routers/: identify_router.py  introduce_router.py  users_router.py
utils/: __init__.py  get_details_by_disease_name.py  get_disease_suggested_from_model.py  is_valid_comment.py
